resources/public/css/main.css
form {
    margin: 0;
}
ul {
    list-style-type: none;
}

.nav {
    margin: 0;
    padding: 0;
}
.nav li {
    display: inline;
    padding: 10px;
}

#particles {
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    z-index: -100;
}

#youtubes-search #search-results {
    margin-top: 1em;
}
#youtubes-search #search-results div {
    position: relative;
}
#youtubes-search #search-results img {
    border: solid;
    height: 5em;
    margin: .5em 1em .5em 0;
    width: 8em;
}
#youtubes-search #search-results a {
    position: absolute;
    top: 1.5em;
}
#youtubes-search #search-results .views {
    position: absolute;
    top: 3em;
}

